	 0.7.0 release.
20040618 joystick.c,widget/menu.c: don't set joystick type to an invalid
	 value if the widget joystick selector cancelled.
20040618 ui/svga/svgakeyboard.c: update for the new input layer scheme.
20040618 input.[ch],ui/uijoystick.c,ui/sdl/sdljoystick.c: allow the libjsw
	 and SDL joystick codes to pass more than one fire button through
	 to the input layer.
20040618 hacking/input.txt: add some documentation on the input layer.
20040619 z80/z80.c: save/restore the high bit of R correctly (thanks, Jan
         Samohýl).
20040620 zxatasp.c,zxcf.c: more literal constant removal.
20040620 README,autogen.sh: add script to do the autotools invocation.
20040621 configure.in: restore autoconf2.13 compatability.
20040621 man/fuse.1: small man page update.
20040621 ChangeLog: Darren did the initial Spectrum SE emulation.
20040623 man/fuse.1: Updates for Interface II and IDE command line options.
20040626 spectrum.c: Now need to include "sound/lowlevel.h" to get
         ALWAYS_USE_TIMER defined for SDL
20040627 sound/sdlsound.c: Fuse generates 16 bit sound in signed host byte
         order.
20040628 ui/gtk/options.pl: improve user interface for text entry boxes
	 slightly.
20040701 configure.in,utils.c,ui/gtk/fileselector.c: check we have
	 <libgen.h> before #including it (thanks, Marek).
20040702 ui/gtk/debugger.c: add column headings to the memory map pane.
20040702 man/fuse.1: debugger docs update.
20040702 hacking/sound.txt,sound/sunsound.c: fix up for 16 bit sound
	 (compiles, but untested).
20040702 machines/tc2048.c,memory.c,scld.c,slt.c,zxatasp.c,zxcf.c:
         #include <string.h> for memcpy and memset prototypes.
20040702 configure.in,ui/Makefile.am: disable the broken and unmaintained
	 GGI user interface.
20040703 settings.dat,man/fuse.1,ui/options.dat,widget/menu.c: allow
	 selection between .szx and .z80 for snaps saved by the widget
	 UIs.
20040703 rzx.c: use libspectrum's new ability to select the embedded snap
	 format.